Changes in readme.md

--- a/src/main/resources/DueDateReport.properties
+++ b/src/main/resources/DueDateReport.properties
@@ -1,5 +1,6 @@
 due-date-report.label=Due Date Report
 due-date-report.name=Due Date
-due-date-report.description=Select the due date to display
+due-date-report.description=This plugin generates report with issues where "due date" < Selected date
 due-date-report.dueDate.required = A valid "Due Date" is required to generate this report.
+due-date-report.dueDate.description = Please select due date (if empty -then Now date will be used)
 due-date-report.projectid.invalid = Please select a valid project.
